# CommentsCRUD/src/main/java/ru/astinezh/commentscrud/controller/reposytory/CommentsRepository.java
@@ -1,9 +1,0 @@
-package ru.astinezh.commentscrud.controller.reposytory;
-
-import org.springframework.data.jpa.repository.JpaRepository;
-import ru.astinezh.commentscrud.controller.entity.Comment;
-
-import java.util.UUID;
-
-public interface CommentsRepository extends JpaRepository<Comment, UUID> {
-}
